--- a/guideLine/html/sub/guideline.html
+++ b/guideLine/html/sub/guideline.html
@@ -57,7 +57,7 @@
                     </tr>
                     <tr>
                         <th scope="row">&lt; br &gt;</th>
-                        <td>&lt;br&gt;태그는 사용을 자제 </td>
+                        <td>&lt;br&gt;태그는 사용을 자제 (<span class="red">반응형에 취약</span>) </td>
                     </tr>
                 </tbody>
             </table>
@@ -112,7 +112,7 @@
                 <tbody>
                     <tr>
                         <th scope="row">SASS 기본</th>
-                        <td> SCSS 를 사용</td>
+                        <td> SCSS 를 사용(css 문법이랑 같음)</td>
                     </tr>
                     <tr>
                         <th scope="row">SASS 주석</th>
