--- a/guideLine/html/sub/jquery.html
+++ b/guideLine/html/sub/jquery.html
@@ -34,15 +34,33 @@
     <!-- Main Content -->
     <main id="container">
         <section id="basicTag">
-            <h2>JQUERY</h2>
+            <h2>JQUERY(& javascript)</h2>
             <h3>기본태그(동적)</h3>
-            <article>
-                <pre>
+            <pre>
 $(document).on("click", "[클래스 & 아이디 & 속성]", function(){
 
 });
-                </pre>
-            </article>
+            </pre>
+        </section>
+        <section>
+            <h3>생성자 함수</h3>
+            <h4>기본문법</h4>
+            <p class="notice">생성자 함수는 함수 이름 첫 글자를 대문자로 작성 (암묵적인 룰)</p>
+            <pre>
+function Person(){
+
+}
+            </pre>
+            <h4>생성자함수 활용</h4>
+            <pre>
+function Person(){
+    this.name = name;
+    this.job = job;
+}
+
+let p = new Person('josh', 'developer');
+console.log(p);
+            </pre>
         </section>
         <section id="elementMove">
             <h3>클릭시 특정앨리먼트로 이동</h3>
