--- a/vueProject/playground/backup_0511/vue-way.html
+++ b/vueProject/playground/backup_0511/vue-way.html
@@ -4,42 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reactivity 구현</title>
+    <title>Reactivity 구현 및 코드 라이브러리화</title>
 </head>
 <body>
+    <p>console창에 'viewModel.str=''' 입력</p>
     <div id="app"></div>
     <script>
-        var div = document.querySelector('#app');
-        var viewModel = {};
+        let div = document.querySelector('#app');
+        let viewModel = {};
 
-        //즉시실행 함수 : 애플리케이션 로직에 노출되지 않게 또 다른 스코프에 소스를 넣어줌
+        //즉시 실행함수
         (function(){
             function init(){
-                // object.defineProperty(대상 객체, 객체의 속성, {
-                //     // 정의할 내용
-                // });
-
-                Object.defineProperty(viewModel, 'str', {
+                //객체의 동작을 재정의 defineProperty(대상객체, 객체의 속성,{})
+                Object.defineProperty(viewModel, 'str',{
                     // 속성에 접근했을 때의 동작을 정의
                     get: function(){
                         console.log('접근');
                     },
 
-                    //속성에 값을 할당했을 때의 동작을 정의
+                    // 속성에 값을 할당했을 때의 동작을 정의 
                     set: function(newValue){
                         console.log('할당', newValue);
                         render(newValue);
                     }
-                });
+                }); 
             }
-            
-            function render(value) {
+
+            // 텍스트 값을 변경하는 함수
+            function render(value){
                 div.innerHTML = value;
             }
 
+            //호출
             init();
         })();
-        
     </script>
 </body>
 </html>
