--- a/vueProject/playground/backup_0511/instance.html
+++ b/vueProject/playground/backup_0511/instance.html
@@ -8,20 +8,19 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-<div id="app">{{message}}</div>
+<p>console창에 vw 입력하면 vue에 대한 API 확인</p>
+<div id="app"></div>
 <script>
-    var vm = new Vue({
+    let vm = new Vue({
         el: '#app',
         data: {
-            message: 'hi'
+            message: 'Hi'
         },
         methods:{
-
-        },
-        created: function(){
-
+            
         }
     });
+
 </script>
 </body>
 </html>
