--- a/vueProject/playground/backup_0511/web-dev.html
+++ b/vueProject/playground/backup_0511/web-dev.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기존 웹개발 방식</title>
+    <title>기존 웹 개발 방식</title>
 </head>
 <body>
-    <div id="app">
-        
-    </div>
+    <div id="app"></div>
     <script>
-        var div = document.querySelector('#app');
-        var str = 'Hello world';
+        let div = document.querySelector('#app');
+        let str = 'Hello world';
         console.log(div);
-        div.innerHTML = str;
-
-        str = 'Hello world!!!';
+        str = 'Hello world !!';
 
         div.innerHTML = str;
     </script>
